force-app/main/default/objects/Template_Item__c.object
<CustomObject>
    <description>Stories that are included in related templates in Imhotep App Builder.</description>
    <fields>
        <fullName>Acceptance_Criteria_Tests__c</fullName>
        <description>Acceptance criteria and any basic testing instructions. What is the &quot;definition of done&quot; and how would someone test it to know it&apos;s working as designed. Consider your happy path and any edge cases. For more detailed testing, use the story&apos;s Testing tab.</description>
        <inlineHelpText>Acceptance criteria and any basic testing instructions. What is the &quot;definition of done&quot; and how would someone test it to know it&apos;s working as designed. Consider your happy path and any edge cases. For more detailed testing, use the story&apos;s Testing tab.</inlineHelpText>
        <label>Acceptance Criteria/Tests</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_from_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this template item was created from another template.</description>
        <inlineHelpText>If checked, this template item was created from another template.</inlineHelpText>
        <label>Created from Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Checklist__c</fullName>
        <description>Actions to take in order to fully deploy changes (activate a Flow, assign a permset, etc.).</description>
        <inlineHelpText>Actions to take in order to fully deploy changes (activate a Flow, assign a permset, etc.).</inlineHelpText>
        <label>Deployment Checklist</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Beginner__c</fullName>
        <description>Estimated level of effort to implement the story for someone who is new to, or unfamiliar with, this task.</description>
        <inlineHelpText>Estimated level of effort to implement the story for someone who is new to, or unfamiliar with, this task.</inlineHelpText>
        <label>Estimated Points (Beginner)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Expert__c</fullName>
        <description>Estimated level of effort to implement the story for someone who has advanced experience with this task.</description>
        <inlineHelpText>Estimated level of effort to implement the story for someone who has advanced experience with this task.</inlineHelpText>
        <label>Estimated Points (Expert)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Points_Intermediate__c</fullName>
        <description>Estimated level of effort to implement the story for someone who is somewhat familiar with this task.</description>
        <inlineHelpText>Estimated level of effort to implement the story for someone who is somewhat familiar with this task.</inlineHelpText>
        <label>Estimated Points (Intermediate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <description>Priority of this story within the release (should be continuously reassessed).</description>
        <inlineHelpText>Priority of this story within the release (should be continuously reassessed).</inlineHelpText>
        <label>Priority/Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Build_Notes__c</fullName>
        <description>Working notes kept by the builder/developer on how they are implementing the story.</description>
        <inlineHelpText>Working notes kept by the builder/developer on how they are implementing the story.</inlineHelpText>
        <label>Solution/Build Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Story_Description__c</fullName>
        <description>User story/high-level requirement description.</description>
        <inlineHelpText>User story/high-level requirement description.</inlineHelpText>
        <label>Story/Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Template Items</relationshipLabel>
        <relationshipName>Template_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>Estimated_Points_Beginner__c</columns>
        <columns>Estimated_Points_Intermediate__c</columns>
        <columns>Estimated_Points_Expert__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>